[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/monsters/cookie.png" type="Texture" id=1]
[ext_resource path="res://sprites/character/cat.png" type="Texture" id=2]
[ext_resource path="res://scenes and scripts/hira_practice.gd" type="Script" id=3]
[ext_resource path="res://scenes and scripts/monster.gd" type="Script" id=4]
[ext_resource path="res://assets/NotoSansJP-Regular.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[node name="hira_practice" type="Node2D"]
script = ExtResource( 3 )

[node name="monster" type="Sprite" parent="."]
position = Vector2( 454, 337 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="question" type="Label" parent="monster"]
margin_left = -34.0
margin_top = 242.0
margin_right = 54.0
margin_bottom = 326.0
custom_fonts/font = SubResource( 1 )

[node name="cat" type="Sprite" parent="."]
position = Vector2( 135, 597 )
texture = ExtResource( 2 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="lineedit" type="LineEdit" parent="."]
margin_left = 129.0
margin_top = 724.0
margin_right = 548.0
margin_bottom = 802.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "click to start"

[node name="reset_lineedit" type="LineEdit" parent="."]
margin_left = -264.0
margin_top = -94.0
margin_right = -206.0
margin_bottom = -70.0
virtual_keyboard_enabled = false

[node name="highscore_label" type="Label" parent="."]
margin_left = 102.0
margin_top = 1128.0
margin_right = 666.0
margin_bottom = 1451.0
custom_fonts/font = SubResource( 3 )

[connection signal="focus_entered" from="lineedit" to="." method="_on_lineedit_focus_entered"]
[connection signal="focus_exited" from="lineedit" to="." method="_on_lineedit_focus_exited"]
[connection signal="text_changed" from="lineedit" to="." method="_on_lineedit_text_changed"]
